Adding 'notifyDeploymentError' back taking a list of PublishItem